// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon 1`] = `
<svg
  className="align-text-bottom text-light"
  fill="currentColor"
  height={18}
  viewBox="0 0 16 16"
  width={18}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"
    fillRule="evenodd"
  />
</svg>
`;

exports[`Icon with width and height 1`] = `
<svg
  className="align-text-bottom text-light"
  fill="currentColor"
  height={32}
  viewBox="0 0 16 16"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"
    fillRule="evenodd"
  />
</svg>
`;
